Add section for books already read

--- a/Book Club List.html
+++ b/Book Club List.html
@@ -1,24 +1,16 @@
 <DOCTYPE! html>
 
 <head>
-
 	<title>Book Club List</title>
 </head>
 
 <body>
 	<h1 style="font-family: Georgia"><strong>Sam and Andrew's Book Club</strong></h1>
-	
 
-
-
-
-
-
-
-
-
-
-
-
+  <h3>Read</h3>
+  <ul>
+    <li>"Cutting for Stone" by Abraham Verghese</li>
+    <li>"Language in Thought and Action" by S. I. Hayakawa and Alan R. Hayakawa</li>
+  </ul>
 
 </body>
