--- a/a list of things i want:need.html
+++ b/a list of things i want:need.html
@@ -4,10 +4,11 @@
 	<p=font-size; 30 px> <strong>A list of things I need/want</strong></p>
          <ol style= "font-family: Arial">
          	<li style= "color: red">A black and white laser printer</li>
-         	<li style= "color: orange">A pair of beginner ice skates</li>
+         	<li style= "color: orange"> <a href="https://www.skates.com/Riedell-121-Ice-skates-p/rbr-121b.htm"> A pair of beginner (<em>figure</em>) ice skates</a></li>
          	<li style= "color: dark yellow">A bookshelf for my books</li>
          	<li style= "color: yellowgreen">A nice backpack to take to work</li>
          	<li style= "color: green">Really nice clothes</li>
+         	<li style= "color: purple">Flip flops for next summer or just wearing around the house</li>
          </ol>
 
 
