Add author to Invisible Man

--- a/Book Club List.html
+++ b/Book Club List.html
@@ -14,7 +14,7 @@
 
  <h3>To read:</h3><h3><strong>Fiction</strong><//h3>
  <ol>
- 	<li>"The Invisible Man", by </li>
+ 	<li>"The Invisible Man" by Ralph Ellison</li>
 
 
 
