Clean code styling to have even indentation

--- a/Book Club List.html
+++ b/Book Club List.html
@@ -7,18 +7,16 @@
 <body>
 	<h1 style="font-family: Georgia"><strong>Sam and Andrew's Book Club</strong></h1>
 
- <h3>To read:</h3><h3 style= "color: blue">Non-fiction</h3>
- <ol>
- 	<li>"</li>
-</ol>
+  <h3>To read:</h3>
+  <h3 style= "color: blue">Non-fiction</h3>
+    <ol>
+      <li>"</li>
+    </ol>
 
- <h3>To read:</h3><h3><strong>Fiction</strong><//h3>
- <ol>
- 	<li>"The Invisible Man" by Ralph Ellison</li>
-
-
-
- </ol>
+  <h3>To read:</h3><h3><strong>Fiction</strong><//h3>
+    <ol>
+      <li>"The Invisible Man" by Ralph Ellison</li>
+    </ol>
 
   <h3>Read</h3>
   <ul>
