Added recommended by Sam section

--- a/Book Club List.html
+++ b/Book Club List.html
@@ -24,4 +24,11 @@
     <li>"Language in Thought and Action" by S. I. Hayakawa and Alan R. Hayakawa</li>
   </ul>
 
+  <h3>Recommended by Sam</h3>
+    <ul>
+      <li><a href="http://amzn.com/B003NTI8WM">East of Eden</a> by John Steinbeck</li>
+      <li><a href="http://amzn.com/B00DT6ABMO">The Power of a Positive No</a> by William Ury</li>
+      <li><a href="http://amzn.com/0345417941">The Cider House Rules</a> by John Irving</li>
+    </ul>
+
 </body>
