Added Dogs of Babel to list of books read

--- a/Book Club List.html
+++ b/Book Club List.html
@@ -22,6 +22,7 @@
   <ul>
     <li>"Cutting for Stone" by Abraham Verghese</li>
     <li>"Language in Thought and Action" by S. I. Hayakawa and Alan R. Hayakawa</li>
+    <li><a href="http://amzn.com/B000FDFWGO">The Dogs of Babel: A Novel</a> by Carolyn Parkhurst</li>
   </ul>
 
   <h3>Recommended by Sam</h3>
