--- a/Book Club List.html
+++ b/Book Club List.html
@@ -7,29 +7,41 @@
 <body>
 	<h1 style="font-family: Georgia"><strong>Sam and Andrew's Book Club</strong></h1>
 
-  <h3>To read:</h3>
+
+
+  <h2>Andrew's Wish List</h2>
   <h3 style= "color: blue">Non-fiction</h3>
     <ol>
-      <li>"</li>
+      <li></li>
     </ol>
 
-  <h3>To read:</h3><h3><strong>Fiction</strong><//h3>
+  <h3><strong>Fiction</strong><//h3>
     <ol>
       <li>"The Invisible Man" by Ralph Ellison</li>
     </ol>
 
-  <h3>Read</h3>
-  <ul>
-    <li>"Cutting for Stone" by Abraham Verghese</li>
-    <li>"Language in Thought and Action" by S. I. Hayakawa and Alan R. Hayakawa</li>
-    <li><a href="http://amzn.com/B000FDFWGO">The Dogs of Babel: A Novel</a> by Carolyn Parkhurst</li>
-  </ul>
+  <h2>Sam's Wish List</h2>
+    <ul>
+    </ul>
 
-  <h3>Recommended by Sam</h3>
+  <h2>Read</h2>
+    <ul>
+      <li>"Cutting for Stone" by Abraham Verghese</li>
+      <li>"Language in Thought and Action" by S. I. Hayakawa and Alan R. Hayakawa</li>
+      <li><a href="http://amzn.com/B000FDFWGO">The Dogs of Babel: A Novel</a> by Carolyn Parkhurst</li>
+    </ul>
+
+  <h2>Recommended by Andrew</h2>
+    <ul>
+    </ul>
+
+  <h2>Recommended by Sam</h2>
     <ul>
       <li><a href="http://amzn.com/B003NTI8WM">East of Eden</a> by John Steinbeck</li>
       <li><a href="http://amzn.com/B00DT6ABMO">The Power of a Positive No</a> by William Ury</li>
       <li><a href="http://amzn.com/0345417941">The Cider House Rules</a> by John Irving</li>
     </ul>
+
+
 
 </body>
