Delete FIction/Nonfiction, Added Titles

--- a/Book Club List.html
+++ b/Book Club List.html
@@ -12,12 +12,11 @@
   <h2>Andrew's Wish List</h2>
   <h3 style= "color: blue">Non-fiction</h3>
     <ol>
-      <li></li>
+      <li>Infinite Jest, by David Foster Wallace</li>
     </ol>
 
   <h3><strong>Fiction</strong><//h3>
     <ol>
-      <li>"The Invisible Man" by Ralph Ellison</li>
     </ol>
 
   <h2>Sam's Wish List</h2>
@@ -33,6 +32,7 @@
 
   <h2>Recommended by Andrew</h2>
     <ul>
+      <li>"The Visible Man" by Chuck Klosterman</li>
     </ul>
 
   <h2>Recommended by Sam</h2>
