--- a/a list of things i want:need.html
+++ b/a list of things i want:need.html
@@ -3,12 +3,15 @@
 <body> 
 	<p=font-size; 30 px> <strong>A list of things I need/want</strong></p>
          <ol style= "font-family: Arial">
-         	<li style= "color: red">A black and white laser printer</li>
-         	<li style= "color: orange"> <a href="https://www.skates.com/Riedell-121-Ice-skates-p/rbr-121b.htm"> A pair of beginner (<em>figure</em>) ice skates</a></li>
-         	<li style= "color: dark yellow">A bookshelf for my books</li>
-         	<li style= "color: yellowgreen">A nice backpack to take to work</li>
-         	<li style= "color: green">Really nice clothes</li>
-         	<li style= "color: purple">Flip flops for next summer or just wearing around the house</li>
+         	<li>A black and white laser printer</li>
+         	<li> <a href="https://www.skates.com/Riedell-121-Ice-skates-p/rbr-121b.htm"> A pair of beginner (<em>figure</em>) ice skates</a></li>
+         	<li>A bookshelf for my books</li>
+         	<li>A nice backpack to take to work</li>
+         	<li>Really nice clothes</li>
+         	<li>Flip flops for next summer or just wearing around the house</li>
+         	<li>Three new pillows</li> 
+         	<li>A desk lamp</li> 
+         	<li>A high quality yoga mat</li> 
          </ol>
 
 
