Add iframe trailers, synopsis and attach css file

--- a/a list of things i want:need.html
+++ b/a list of things i want:need.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html> 
-<title>A list of things I need</title>
+<title>Andrew's Whishlist</title>
 <body> 
 	<p=font-size; 30 px> <strong>A list of things I need/want</strong></p>
          <ol style= "font-family: Arial">
          	<li>A black and white laser printer</li>
-         	<li> <a href="https://www.skates.com/Riedell-121-Ice-skates-p/rbr-121b.htm"> A pair of beginner (<em>figure</em>) ice skates</a></li>
+         	<li> <a href="http://www.lowpriceskates.com/jackson-DJ1592-mystique-mens.aspx"> A pair of beginner (<em>figure</em>) ice skates</a></li>
          	<li>A bookshelf for my books</li>
          	<li>A nice backpack to take to work</li>
          	<li>Really nice clothes</li>
