Added links and new items

--- a/a list of things i want:need.html
+++ b/a list of things i want:need.html
@@ -3,15 +3,23 @@
 <body> 
 	<p=font-size; 30 px> <strong>A list of things I need/want</strong></p>
          <ol style= "font-family: Arial">
-         	<li>A black and white laser printer</li>
+         	<li><a href="http://www.amazon.com/dp/B004H1PB9I/ref=wl_it_dp_o_pC_S_ttl?_encoding=UTF8&colid=2AKUOVKEIZ8T1&coliid=I7ZU522QWVD4G">A black and white laser printer</a></li>
          	<li> <a href="http://www.lowpriceskates.com/jackson-DJ1592-mystique-mens.aspx"> A pair of beginner (<em>figure</em>) ice skates</a></li>
          	<li>A bookshelf for my books</li>
          	<li>A nice backpack to take to work</li>
-         	<li>Really nice clothes</li>
+         	<li>Really nice clothes (Express, Banana Republic, Aeropostle)</li>
          	<li>Flip flops for next summer or just wearing around the house</li>
          	<li>Three new pillows</li> 
-         	<li>A desk lamp</li> 
+         	<li>A desk lamp (clampable lamps are a plus)</li> 
          	<li>A high quality yoga mat</li> 
+            <li> A desktop Monitor (27" Preferred) </li>
+            <li>A new beautiful journal</li>
+             <li><a href="http://www.amazon.com/dp/0156482401/ref=wl_it_dp_o_pd_nS_ttl?_encoding=UTF8&colid=2AKUOVKEIZ8T1&coliid=I3PJV5KNDAOQ2F">Language in Thought and Action, by S.I. Hayakawa</a></li>
+             <li><a href="http://www.amazon.com/dp/0810152312/ref=wl_it_dp_o_pd_S_ttl?_encoding=UTF8&colid=2AKUOVKEIZ8T1&coliid=I14ZFI4BOCWHVU">September: Poems by Rachel Jameson Webster</a></li>
+             <li><a href="http://www.amazon.com/dp/1938912349/ref=wl_it_dp_o_pd_nS_ttl?_encoding=UTF8&colid=2AKUOVKEIZ8T1&coliid=I28BYTLCO0V9H7">The Year of No Mistakes by Cristin O'Keefe Aptowicz</a></li>
+             <li><a href="http://www.poetryfoundation.org/poetrymagazine/subscribe">A subscription to <em>Poetry</em> Magazine</a></li>
+             <li>Really awesome pens for journaling</li>
+            <li>Gift Cards (itunes, bookstores, AMC)</li> 
          </ol>
 
 
